<resources>
    <string name="app_name">Nutritions</string>
    <string name="action_settings">Settings</string>
    <string name="Protein">Protein</string>
    <string name="Carbohydrate">Carbohydrate</string>
    <string name="Fat">Fat</string>
    <string name="addButton">Add Nutrients</string>
    <string name="food">Food</string>
    <string name="backButton">Back</string>
    <string name="addRandom">add random</string>
    <string name="Calcium">Calcium</string>
    <string name="Iodine">Iodine</string>
    <string name="Iron">Iron</string>
    <string name="Kalium">Kalium</string>
    <string name="Magnesium">Magnesium</string>
    <string name="Natrium">Natrium</string>
    <string name="VitaminA">VitaminA</string>
    <string name="VitaminB1">VitaminB1</string>
    <string name="VitaminB2">VitaminB2</string>
    <string name="VitaminB3">VitaminB3</string>
    <string name="VitaminB6">VitaminB6</string>
    <string name="VitaminB9">VitaminB9</string>
    <string name="VitaminB12">VitaminB12</string>
    <string name="VitaminC">VitaminC</string>
    <string name="VitaminD">VitaminD</string>
    <string name="Zinc">Zinc</string>
    <string name="addProduct">Add product</string>
    <string name="selectProductHint">Select Product</string>
    <string name="Kcal">Calories</string>
    <string name="addProductMeal">Add to meal</string>
    <string name="addMeal">Add meal</string>
    <string name="mealName">Meal name</string>
    <string name="title_activity_login">Sign in</string>
    <string name="selectMealHint">Select Meal</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="error_email">Please enter a valid email</string>
    <string name="prompt_password">Password</string>
    <string name="error_password">Password must be at least 6 characters</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="statistics">"Statistics"</string>

</resources>
